recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  while (steps!=0) {
    current(steps)
    avance(lenght*shrink:Double)
    droite(angle:Double)
    return tree(steps-1,lenght*shrink,angle,shrink)
  }
}
